<resources>
    <string name="app_name">IronFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_cap">TRAINING SCHEDULE</string>
    <string name="rec_history">RECENT HISTORY</string>
    <string name="planned_training">PLANNED TRAINING SUMMARY</string>
    <string name="todays_schedule">No Scheduled Training</string>
    <string name="exercises">Exercises</string>
    <string name="exercises_cap">EXERCISES</string>
    <string name="muscles">Muscles</string>
    <string name="muscles_cap">MUSCLES</string>
    <string name="cardio">Cardio</string>
    <string name="cardio_cap">CARDIO</string>
    <string name="sets">Sets</string>
    <string name="sets_cap">SETS</string>
    <string name="reps">Reps</string>
    <string name="reps_cap">REPS</string>
    <string name="total_reps">Total Reps</string>
    <string name="no_history">No Training History</string>


    <!--  Fake data history recycler  -->
    <string name="history_recycler_date">Tuesday, Feb. 11</string>
    <string name="history_recycler_name">Chest and Shoulders</string>
    <string name="history_recycler_muscles">Chest, Delts, Triceps</string>
    <string name="history_recycler_sets">6 Exercises, 36 Sets</string>

    <!-- image descriptions  -->
    <string name="history_image">History Image</string>
    <string name="gympic">gympic</string>
    <string name="divide">dived line</string>
    <string name="iv_training_summary">Training Summary image</string>
    <string name="nav_header_image">Navigation Header</string>
    <string name="user_icon">User Icon</string>
    <string name="scale">Scale</string>
    <string name="bodyfaticon">Body Fat Icon</string>

    <!--  Dummy and temp strings to be deleted  -->
    <string name="session">Chest and Shoulders</string>
    <string name="training_summary">Training Summary   //   Thursday Feb. 24th</string>
    <string name="nav_user_name">Eric Gilmore</string>
    <string name="body_weight">215 lbs</string>
    <string name="fat_percent">15.2 %</string>

    <!---  Muscle names  -->
    <string name="chest">Chest</string>
    <string name="chest_cap">CHEST</string>
    <string name="back">Back</string>
    <string name="back_cap">BACK</string>
    <string name="deltoids">Deltoids</string>
    <string name="deltoids_cap">DELTOIDS</string>
    <string name="triceps">Triceps</string>
    <string name="triceps_cap">TRICEPS</string>
    <string name="biceps">Biceps</string>
    <string name="biceps_cap">BICEPS</string>
    <string name="legs">Legs</string>
    <string name="legs_cap">LEGS</string>


    <!--  Names of exercises -->
    <string name="incline_dumbbell_press">Incline Dumbbell Press</string>
    <string name="machine_dips">Machine Dips</string>
    <string name="peck_deck">Peck Deck</string>
    <string name="decline_dumbbell_press">Decline Dumbbell Press</string>
    <string name="f_lateral_raises">Front Lateral Raises</string>
    <string name="r_lateral_raises">Rear Lateral Raises</string>
    <string name="s_lateral_raises">Side Lateral Raises</string>
    <string name="arnold_press">Arnold Press</string>

</resources>
